// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`2 images,  unchecked 1`] = `
<div>
  <header>
    <h1>
      Face Emotion System
    </h1>
  </header>
  <div
    className="url_form"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        name="url"
        onChange={[Function]}
        placeholder="URLを入力してください"
        type="text"
        value=""
      />
      <button
        className="display_button"
        disabled={true}
        type="submit"
      >
        表示
      </button>
    </form>
  </div>
  <div
    className="images"
  >
    <div
      className="image_area"
    >
      <div>
        <div
          className="image_info"
        >
          <img
            alt="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            className="image"
            onClick={[Function]}
            src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
          />
          <form>
            <input
              checked={false}
              className="image_checkbox"
              type="checkbox"
              value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            />
          </form>
          steve
          <br />
          2020/10/15
        </div>
      </div>
      <div>
        <div
          className="image_info"
        >
          <img
            alt="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            className="image"
            onClick={[Function]}
            src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
          />
          <form>
            <input
              checked={false}
              className="image_checkbox"
              type="checkbox"
              value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            />
          </form>
          steve
          <br />
          2020/10/15
        </div>
      </div>
    </div>
  </div>
  <div
    className="analyze_button"
  >
    <form
      onSubmit={[Function]}
    >
      <button
        disabled={true}
      >
        分析
      </button>
    </form>
  </div>
</div>
`;

exports[`2 images, 1 checked 1`] = `
<div>
  <header>
    <h1>
      Face Emotion System
    </h1>
  </header>
  <div
    className="url_form"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        name="url"
        onChange={[Function]}
        placeholder="URLを入力してください"
        type="text"
        value=""
      />
      <button
        className="display_button"
        disabled={true}
        type="submit"
      >
        表示
      </button>
    </form>
  </div>
  <div
    className="images"
  >
    <div
      className="image_area"
    >
      <div>
        <div
          className="image_info"
        >
          <img
            alt="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            className="image"
            onClick={[Function]}
            src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
          />
          <form>
            <input
              checked={true}
              className="image_checkbox"
              type="checkbox"
              value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            />
          </form>
          steve
          <br />
          2020/10/15
        </div>
      </div>
      <div>
        <div
          className="image_info"
        >
          <img
            alt="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            className="image"
            onClick={[Function]}
            src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
          />
          <form>
            <input
              checked={false}
              className="image_checkbox"
              type="checkbox"
              value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            />
          </form>
          steve
          <br />
          2020/10/15
        </div>
      </div>
    </div>
  </div>
  <div
    className="analyze_button"
  >
    <form
      onSubmit={[Function]}
    >
      <button
        disabled={false}
      >
        分析
      </button>
    </form>
  </div>
</div>
`;

exports[`2 images, all checked 1`] = `
<div>
  <header>
    <h1>
      Face Emotion System
    </h1>
  </header>
  <div
    className="url_form"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        name="url"
        onChange={[Function]}
        placeholder="URLを入力してください"
        type="text"
        value=""
      />
      <button
        className="display_button"
        disabled={true}
        type="submit"
      >
        表示
      </button>
    </form>
  </div>
  <div
    className="images"
  >
    <div
      className="image_area"
    >
      <div>
        <div
          className="image_info"
        >
          <img
            alt="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            className="image"
            onClick={[Function]}
            src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
          />
          <form>
            <input
              checked={true}
              className="image_checkbox"
              type="checkbox"
              value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            />
          </form>
          steve
          <br />
          2020/10/15
        </div>
      </div>
      <div>
        <div
          className="image_info"
        >
          <img
            alt="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            className="image"
            onClick={[Function]}
            src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
          />
          <form>
            <input
              checked={true}
              className="image_checkbox"
              type="checkbox"
              value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
            />
          </form>
          steve
          <br />
          2020/10/15
        </div>
      </div>
    </div>
  </div>
  <div
    className="analyze_button"
  >
    <form
      onSubmit={[Function]}
    >
      <button
        disabled={true}
      >
        分析
      </button>
    </form>
  </div>
</div>
`;

exports[`display images test 2 images,  unchecked 1`] = `
<div
  className="back"
>
  <header
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h6
        className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit"
      >
        Face Emotion System
      </h6>
    </div>
  </header>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  />
  <div
    className="MuiGrid-root"
  />
  <div
    className="MuiGrid-root input_area"
  >
    <form
      autoComplete="on"
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiTextField-root url_form"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink={false}
          htmlFor="standard-basic"
          id="standard-basic-label"
        >
          URLを入力してください
        </label>
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            id="standard-basic"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained display_button MuiButton-containedPrimary Mui-disabled Mui-disabled"
        disabled={true}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="submit"
      >
        <span
          className="MuiButton-label"
        >
          表示
        </span>
      </button>
    </form>
  </div>
  <div
    className="images"
  >
    <div
      className="image_area"
    >
      <div>
        <ul
          className="MuiGridList-root"
          style={
            Object {
              "margin": -2,
            }
          }
        >
          <li
            className="MuiGridListTile-root"
            style={
              Object {
                "height": 184,
                "padding": 2,
                "width": "25%",
              }
            }
          >
            <div
              className="MuiGridListTile-tile"
            >
              <img
                className="image"
                onClick={[Function]}
                src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
              />
              <div
                className="MuiGridListTileBar-root MuiGridListTileBar-titlePositionBottom MuiGridListTileBar-rootSubtitle"
              >
                <div
                  className="MuiGridListTileBar-titleWrap MuiGridListTileBar-titleWrapActionPosRight"
                >
                  <div
                    className="MuiGridListTileBar-title"
                  >
                    steve
                  </div>
                  <div
                    className="MuiGridListTileBar-subtitle"
                  >
                    2020/10/15
                  </div>
                </div>
                <div
                  className="MuiGridListTileBar-actionIcon"
                >
                  <span
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1 MuiCheckbox-root MuiCheckbox-colorSecondary image_checkbox MuiIconButton-colorSecondary MuiIconButton-edgeEnd"
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={null}
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <input
                        checked={false}
                        className="PrivateSwitchBase-input-4"
                        data-indeterminate={false}
                        onChange={[Function]}
                        type="checkbox"
                        value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
                      />
                      <svg
                        aria-hidden={true}
                        className="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      className="MuiTouchRipple-root"
                    />
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li
            className="MuiGridListTile-root"
            style={
              Object {
                "height": 184,
                "padding": 2,
                "width": "25%",
              }
            }
          >
            <div
              className="MuiGridListTile-tile"
            >
              <img
                className="image"
                onClick={[Function]}
                src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
              />
              <div
                className="MuiGridListTileBar-root MuiGridListTileBar-titlePositionBottom MuiGridListTileBar-rootSubtitle"
              >
                <div
                  className="MuiGridListTileBar-titleWrap MuiGridListTileBar-titleWrapActionPosRight"
                >
                  <div
                    className="MuiGridListTileBar-title"
                  >
                    steve
                  </div>
                  <div
                    className="MuiGridListTileBar-subtitle"
                  >
                    2020/10/15
                  </div>
                </div>
                <div
                  className="MuiGridListTileBar-actionIcon"
                >
                  <span
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1 MuiCheckbox-root MuiCheckbox-colorSecondary image_checkbox MuiIconButton-colorSecondary MuiIconButton-edgeEnd"
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={null}
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <input
                        checked={false}
                        className="PrivateSwitchBase-input-4"
                        data-indeterminate={false}
                        onChange={[Function]}
                        type="checkbox"
                        value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
                      />
                      <svg
                        aria-hidden={true}
                        className="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                    <span
                      className="MuiTouchRipple-root"
                    />
                  </span>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="analyze_button"
  >
    <form
      onSubmit={[Function]}
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled Mui-disabled"
        disabled={true}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="submit"
      >
        <span
          className="MuiButton-label"
        >
          分析
        </span>
      </button>
    </form>
  </div>
</div>
`;

exports[`display images test 2 images, 1 checked 1`] = `
<div
  className="back"
>
  <header
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h6
        className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit"
      >
        Face Emotion System
      </h6>
    </div>
  </header>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  />
  <div
    className="MuiGrid-root"
  />
  <div
    className="MuiGrid-root input_area"
  >
    <form
      autoComplete="on"
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiTextField-root url_form"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink={false}
          htmlFor="standard-basic"
          id="standard-basic-label"
        >
          URLを入力してください
        </label>
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            id="standard-basic"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained display_button MuiButton-containedPrimary Mui-disabled Mui-disabled"
        disabled={true}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="submit"
      >
        <span
          className="MuiButton-label"
        >
          表示
        </span>
      </button>
    </form>
  </div>
  <div
    className="images"
  >
    <div
      className="image_area"
    >
      <div>
        <ul
          className="MuiGridList-root"
          style={
            Object {
              "margin": -2,
            }
          }
        >
          <li
            className="MuiGridListTile-root"
            style={
              Object {
                "height": 184,
                "padding": 2,
                "width": "25%",
              }
            }
          >
            <div
              className="MuiGridListTile-tile"
            >
              <img
                className="image"
                onClick={[Function]}
                src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
              />
              <div
                className="MuiGridListTileBar-root MuiGridListTileBar-titlePositionBottom MuiGridListTileBar-rootSubtitle"
              >
                <div
                  className="MuiGridListTileBar-titleWrap MuiGridListTileBar-titleWrapActionPosRight"
                >
                  <div
                    className="MuiGridListTileBar-title"
                  >
                    steve
                  </div>
                  <div
                    className="MuiGridListTileBar-subtitle"
                  >
                    2020/10/15
                  </div>
                </div>
                <div
                  className="MuiGridListTileBar-actionIcon"
                >
                  <span
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1 MuiCheckbox-root MuiCheckbox-colorSecondary image_checkbox PrivateSwitchBase-checked-2 Mui-checked MuiIconButton-colorSecondary MuiIconButton-edgeEnd"
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={null}
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <input
                        checked={true}
                        className="PrivateSwitchBase-input-4"
                        data-indeterminate={false}
                        onChange={[Function]}
                        type="checkbox"
                        value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
                      />
                      <svg
                        aria-hidden={true}
                        className="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li
            className="MuiGridListTile-root"
            style={
              Object {
                "height": 184,
                "padding": 2,
                "width": "25%",
              }
            }
          >
            <div
              className="MuiGridListTile-tile"
            >
              <img
                className="image"
                onClick={[Function]}
                src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
              />
              <div
                className="MuiGridListTileBar-root MuiGridListTileBar-titlePositionBottom MuiGridListTileBar-rootSubtitle"
              >
                <div
                  className="MuiGridListTileBar-titleWrap MuiGridListTileBar-titleWrapActionPosRight"
                >
                  <div
                    className="MuiGridListTileBar-title"
                  >
                    steve
                  </div>
                  <div
                    className="MuiGridListTileBar-subtitle"
                  >
                    2020/10/15
                  </div>
                </div>
                <div
                  className="MuiGridListTileBar-actionIcon"
                >
                  <span
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1 MuiCheckbox-root MuiCheckbox-colorSecondary image_checkbox MuiIconButton-colorSecondary MuiIconButton-edgeEnd"
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={null}
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <input
                        checked={false}
                        className="PrivateSwitchBase-input-4"
                        data-indeterminate={false}
                        onChange={[Function]}
                        type="checkbox"
                        value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
                      />
                      <svg
                        aria-hidden={true}
                        className="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="analyze_button"
  >
    <form
      onSubmit={[Function]}
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="submit"
      >
        <span
          className="MuiButton-label"
        >
          分析
        </span>
      </button>
    </form>
  </div>
</div>
`;

exports[`display images test 2 images, all checked 1`] = `
<div
  className="back"
>
  <header
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h6
        className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit"
      >
        Face Emotion System
      </h6>
    </div>
  </header>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  />
  <div
    className="MuiGrid-root"
  />
  <div
    className="MuiGrid-root input_area"
  >
    <form
      autoComplete="on"
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiTextField-root url_form"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink={false}
          htmlFor="standard-basic"
          id="standard-basic-label"
        >
          URLを入力してください
        </label>
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            id="standard-basic"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained display_button MuiButton-containedPrimary Mui-disabled Mui-disabled"
        disabled={true}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="submit"
      >
        <span
          className="MuiButton-label"
        >
          表示
        </span>
      </button>
    </form>
  </div>
  <div
    className="images"
  >
    <div
      className="image_area"
    >
      <div>
        <ul
          className="MuiGridList-root"
          style={
            Object {
              "margin": -2,
            }
          }
        >
          <li
            className="MuiGridListTile-root"
            style={
              Object {
                "height": 184,
                "padding": 2,
                "width": "25%",
              }
            }
          >
            <div
              className="MuiGridListTile-tile"
            >
              <img
                className="image"
                onClick={[Function]}
                src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
              />
              <div
                className="MuiGridListTileBar-root MuiGridListTileBar-titlePositionBottom MuiGridListTileBar-rootSubtitle"
              >
                <div
                  className="MuiGridListTileBar-titleWrap MuiGridListTileBar-titleWrapActionPosRight"
                >
                  <div
                    className="MuiGridListTileBar-title"
                  >
                    steve
                  </div>
                  <div
                    className="MuiGridListTileBar-subtitle"
                  >
                    2020/10/15
                  </div>
                </div>
                <div
                  className="MuiGridListTileBar-actionIcon"
                >
                  <span
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1 MuiCheckbox-root MuiCheckbox-colorSecondary image_checkbox PrivateSwitchBase-checked-2 Mui-checked MuiIconButton-colorSecondary MuiIconButton-edgeEnd"
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={null}
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <input
                        checked={true}
                        className="PrivateSwitchBase-input-4"
                        data-indeterminate={false}
                        onChange={[Function]}
                        type="checkbox"
                        value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
                      />
                      <svg
                        aria-hidden={true}
                        className="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li
            className="MuiGridListTile-root"
            style={
              Object {
                "height": 184,
                "padding": 2,
                "width": "25%",
              }
            }
          >
            <div
              className="MuiGridListTile-tile"
            >
              <img
                className="image"
                onClick={[Function]}
                src="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
              />
              <div
                className="MuiGridListTileBar-root MuiGridListTileBar-titlePositionBottom MuiGridListTileBar-rootSubtitle"
              >
                <div
                  className="MuiGridListTileBar-titleWrap MuiGridListTileBar-titleWrapActionPosRight"
                >
                  <div
                    className="MuiGridListTileBar-title"
                  >
                    steve
                  </div>
                  <div
                    className="MuiGridListTileBar-subtitle"
                  >
                    2020/10/15
                  </div>
                </div>
                <div
                  className="MuiGridListTileBar-actionIcon"
                >
                  <span
                    aria-disabled={false}
                    className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1 MuiCheckbox-root MuiCheckbox-colorSecondary image_checkbox PrivateSwitchBase-checked-2 Mui-checked MuiIconButton-colorSecondary MuiIconButton-edgeEnd"
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={null}
                  >
                    <span
                      className="MuiIconButton-label"
                    >
                      <input
                        checked={true}
                        className="PrivateSwitchBase-input-4"
                        data-indeterminate={false}
                        onChange={[Function]}
                        type="checkbox"
                        value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
                      />
                      <svg
                        aria-hidden={true}
                        className="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    className="analyze_button"
  >
    <form
      onSubmit={[Function]}
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled Mui-disabled"
        disabled={true}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="submit"
      >
        <span
          className="MuiButton-label"
        >
          分析
        </span>
      </button>
    </form>
  </div>
</div>
`;

exports[`input test inputed url 1`] = `
<div
  className="back"
>
  <header
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h6
        className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit"
      >
        Face Emotion System
      </h6>
    </div>
  </header>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  />
  <div
    className="MuiGrid-root"
  />
  <div
    className="MuiGrid-root input_area"
  >
    <form
      autoComplete="on"
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiTextField-root url_form"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink={false}
          htmlFor="standard-basic"
          id="standard-basic-label"
        >
          URLを入力してください
        </label>
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            id="standard-basic"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
          />
        </div>
      </div>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained display_button MuiButton-containedPrimary"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="submit"
      >
        <span
          className="MuiButton-label"
        >
          表示
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </form>
  </div>
  <div
    className="images"
  >
    <div
      className="image_area"
    >
      <div>
        <ul
          className="MuiGridList-root"
          style={
            Object {
              "margin": -2,
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="analyze_button"
  >
    <form
      onSubmit={[Function]}
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled Mui-disabled"
        disabled={true}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="submit"
      >
        <span
          className="MuiButton-label"
        >
          分析
        </span>
      </button>
    </form>
  </div>
</div>
`;

exports[`input test not input 1`] = `
<div
  className="back"
>
  <header
    className="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h6
        className="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit"
      >
        Face Emotion System
      </h6>
    </div>
  </header>
  <div
    className="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
  />
  <div
    className="MuiGrid-root"
  />
  <div
    className="MuiGrid-root input_area"
  >
    <form
      autoComplete="on"
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root MuiTextField-root url_form"
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
          data-shrink={false}
          htmlFor="standard-basic"
          id="standard-basic-label"
        >
          URLを入力してください
        </label>
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            id="standard-basic"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained display_button MuiButton-containedPrimary Mui-disabled Mui-disabled"
        disabled={true}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="submit"
      >
        <span
          className="MuiButton-label"
        >
          表示
        </span>
      </button>
    </form>
  </div>
  <div
    className="images"
  >
    <div
      className="image_area"
    >
      <div>
        <ul
          className="MuiGridList-root"
          style={
            Object {
              "margin": -2,
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="analyze_button"
  >
    <form
      onSubmit={[Function]}
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled Mui-disabled"
        disabled={true}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="submit"
      >
        <span
          className="MuiButton-label"
        >
          分析
        </span>
      </button>
    </form>
  </div>
</div>
`;

exports[`inputed url 1`] = `
<div>
  <header>
    <h1>
      Face Emotion System
    </h1>
  </header>
  <div
    className="url_form"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        name="url"
        onChange={[Function]}
        placeholder="URLを入力してください"
        type="text"
        value="https://nishikawa.blob.core.windows.net/images/steve/2020/10/15/01.jpg?sv=2019-07-07&sr=c&si=myPolicyPS&sig=FkKJ4nXCiqzDYjbSaDfqli%2FnErPRTKrD%2BUQfH0MT3ac%3D"
      />
      <button
        className="display_button"
        disabled={false}
        type="submit"
      >
        表示
      </button>
    </form>
  </div>
  <div
    className="images"
  >
    <div
      className="image_area"
    />
  </div>
  <div
    className="analyze_button"
  >
    <form
      onSubmit={[Function]}
    >
      <button
        disabled={true}
      >
        分析
      </button>
    </form>
  </div>
</div>
`;

exports[`not input 1`] = `
<div>
  <header>
    <h1>
      Face Emotion System
    </h1>
  </header>
  <div
    className="url_form"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        name="url"
        onChange={[Function]}
        placeholder="URLを入力してください"
        type="text"
        value=""
      />
      <button
        className="display_button"
        disabled={true}
        type="submit"
      >
        表示
      </button>
    </form>
  </div>
  <div
    className="images"
  >
    <div
      className="image_area"
    />
  </div>
  <div
    className="analyze_button"
  >
    <form
      onSubmit={[Function]}
    >
      <button
        disabled={true}
      >
        分析
      </button>
    </form>
  </div>
</div>
`;
